--- a/doc/reazul_lib.bib
+++ b/doc/reazul_lib.bib
@@ -597,6 +597,31 @@ year = {1992}
 	title = {{Bayesian Sparse Sampling for On-line Reward Optimization}},
 	year = {2005}
 }
+@article{Strehl2008,
+	author = {Strehl, Alexander L and Littman, Michael L},
+	file = {:home/reazul/PhD{\_}Research/Bayesian{\_}Exploration/10.1.1.118.1174.pdf:pdf},
+	keywords = {learning theory,markov decision processes,reinforcement learning},
+	year = {2008},
+	journal={Journal of Computer and System Sciences},
+	volume={74},
+	pages={1309-1331}
+	title = {{An Analysis of Model-Based Interval Estimation for Markov Decision Processes}}
+}
+@article{Strehl2004,
+	author = {Strehl, Alexander L and Littman, Michael L},
+	file = {:home/reazul/PhD{\_}Research/Bayesian{\_}Exploration/4946d51e1f9dd0aefbc4f078c3ff4dd94358.pdf:pdf},
+	year={2004}
+	journal = {International Conference on Machine Learning (ICML)},
+	title = {{Exploration via Model-based Interval Estimation}}
+}
+@article{Wiering1998,
+	author = {Wiering, Marco and Schmidhuber, Jurgen},
+	file = {:home/reazul/PhD{\_}Research/Bayesian{\_}Exploration/Wiering{\_}98{\_}efficientmodelbased.pdf:pdf},
+	year = {1998},
+	pages = {223--228},
+	journal={ International Conference on Simulation of Adaptive Behavior (SAB)}
+	title = {{Efficient Model-Based Exploration}}
+}
 
 
 
